tests/NormalTests/paczka1/small_fuzzy/50749873.err
Error in line 2: cONaNwm4 S284 59,4
Error in line 4: A872 S21 90,0
